--- a/src/index.html
+++ b/src/index.html
@@ -27,24 +27,24 @@
           <div class='container'>
             <div class='header'>
               <h1>A family's story of survival against all odds</h1>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Heavy shooting broke out in the Central African Republic’s capital city, Bangui in 2013. This unprecedented humanitarian crisis spanning over six years now has left 2.9 million people, more than half of the population of CAR (4.6 million people) in dire need of humanitarian assistance and protection. More than one million people – or one in four people from CAR – is either a refugee outside the country or internally displaced. As of 31 March 2019, more than 621,000 people remain displaced.</p>
             </div>
           </div>
         </div>
         <div class='main'>
           <section class='step' id='segment1'>
             <h4>Segment 1</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Mohamed is a 50-year-old married father of eight children ranging in age from 15 to 2 years. He lived peacefully with his family in the neighbourhood of Galabadja in Bangui’s 8th district; owned his home and ran a retail shop until the outbreak of violence on 5 December 2013.</p>
           </section>
 
           <section class='step' id='segment2'>
             <h4>Segment 2</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>During inter-communal conflicts between Muslims and Christians, Mohamed and his family witnessed the ruthless killings of men, children and the rape of women and girls. The sight was too gruesome so when International Forces offered to escort persons-at-risk out of Bangui, Mohamed and his family seized this opportunity.</p>
           </section>
 
           <section class='step' id='segment3'>
             <h4>Segment 3</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>With the little money he had, Mohamed left the IDP site and rent a house, hoping to start a new business and to enroll his children in school. But he had to suspend all plans as inter-communal violence broke out in Bambari town in July 2014. As people restricted movement to avoid getting hit by stray bullets, Mohamed and his family ran out of all basic necessities including food and hygiene supplies.</p>
           </section>
 
           <section class='step' id='segment4'>
@@ -54,7 +54,7 @@
 
           <section class='step' id='segment5'>
             <h4>Segment 5</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Upon arrival in Bria, the family stayed at the PK3 IDP site, which host over 50,000 IDPs. Most IDPs in Bria and countrywide have been displaced several times due to repeated attacks. Mohamed soon realised that inter-communal tensions were also a reality in Bria. The PK3 IDP site predominantly host Christians while Muslims lived in the Bornou neighborhood.</p>
           </section>
         </div>
         
@@ -64,20 +64,18 @@
     <article>
       <div class='grid-container'>
         <div class='col-12'>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>Access constraints continue to hinder humanitarians from reaching the most vulnerable people in need of assistance.</p>
+          <p>CAR remains one of the most dangerous countries in the world for humanitarians. Violence perpetrated by armed groups is also directed against humanitarian actors and their facilities. Humanitarian teams in field missions continue to be intercepted and attacked as they move towards populations in need of assistance. Acts of violence, looting and attacks against humanitarian organizations and their staff persists countrywide.</p>
         </div>
         <div class='col-7'>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <p>During the first quarter of the year (January to March), 70 incidents directly affecting humanitarian staff or goods have been recorded compared with 65 over the same period in 2018. The sub-prefectures of Bambari (Ouaka Prefecture), Batangafo (Ouham Prefecture), Bria (Haute Kotto Prefecture) and Kaga-Bandoro (Nana Gribizi Prefecture) are the most affected areas.</p>
+          <p>In 2018, 41 incidents directly affecting humanitarian actors were recorded in the Bria sub-prefecture, ranking third as the most dangerous area for humanitarians in CAR. Four international NGOs have been robbed, physically assaulted or burglary attempts have been made either on their premises, in town or along the roads in the outskirts of the town. The Bria-Irrabanda road remains only partially accessible to humanitarian actors due to the high risk of attacks or threats from armed men and poor road infrastructures.</p>
         </div>
         <div class='col-5'>
           <img class='full-width' src='https://via.placeholder.com/300' />
         </div>
         <div class='col-12'>
-          <div class='title'><h2>Subhead 1</h2></div>
+          <div class='title'><h2>Bria</h2></div>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
