--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
 
   <body>
 
-    <div class='ticker'>
+    <!-- <div class='ticker'>
       <p>0 steps walked. 0 km. 0 days.</p>
-    </div>
+    </div> -->
 
     <div id='map'></div>
 
@@ -80,7 +80,11 @@
           <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
         </div>
       </div>
-      <div class='placeholder'>
+      <div class='video-container'>
+        <video controls>
+          <source src='assets/video.mp4' type='video/mp4'>
+          Your browser does not support the video tag.
+        </video>
       </div>
       <div class='grid-container'>
         <div class='col-12'>
