updating icons and map flow

--- a/src/index.html
+++ b/src/index.html
@@ -13,9 +13,9 @@
 
   <body>
 
-    <div class='ticker'>
+    <!-- <div class='ticker'>
       <p>0 steps walked. 0 km. 0 days.</p>
-    </div>
+    </div> -->
 
     <div id='map'></div>
 
@@ -33,27 +33,22 @@
         </div>
         <div class='main'>
           <section class='step' id='segment1'>
-            <h4>Segment 1</h4>
             <p>Mohamed is a 50-year-old married father of eight children ranging in age from 15 to 2 years. He lived peacefully with his family in the neighbourhood of Galabadja in Bangui’s 8th district; owned his home and ran a retail shop until the outbreak of violence on 5 December 2013.</p>
           </section>
 
           <section class='step' id='segment2'>
-            <h4>Segment 2</h4>
             <p>During inter-communal conflicts between Muslims and Christians, Mohamed and his family witnessed the ruthless killings of men, children and the rape of women and girls. The sight was too gruesome so when International Forces offered to escort persons-at-risk out of Bangui, Mohamed and his family seized this opportunity.</p>
           </section>
 
           <section class='step' id='segment3'>
-            <h4>Segment 3</h4>
             <p>With the little money he had, Mohamed left the IDP site and rent a house, hoping to start a new business and to enroll his children in school. But he had to suspend all plans as inter-communal violence broke out in Bambari town in July 2014. As people restricted movement to avoid getting hit by stray bullets, Mohamed and his family ran out of all basic necessities including food and hygiene supplies.</p>
           </section>
 
           <section class='step' id='segment4'>
-            <h4>Segment 4</h4>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
           </section>
 
           <section class='step' id='segment5'>
-            <h4>Segment 5</h4>
             <p>Upon arrival in Bria, the family stayed at the PK3 IDP site, which host over 50,000 IDPs. Most IDPs in Bria and countrywide have been displaced several times due to repeated attacks. Mohamed soon realised that inter-communal tensions were also a reality in Bria. The PK3 IDP site predominantly host Christians while Muslims lived in the Bornou neighborhood.</p>
           </section>
         </div>
