updating video, adding slideshowslideshow, map tweaks

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,8 @@
     <link href='https://fonts.googleapis.com/css?family=PT+Sans:400,700' rel='stylesheet'>
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.47.0/mapbox-gl.css' rel='stylesheet' />
     <link href='css/flexboxgrid.min.css' type='text/css' rel='stylesheet'>
+    <link href='css/slick.css' rel='stylesheet'/>
+    <link href='css/slick-theme.css' rel='stylesheet'/>
     <link href='css/styles.css' rel='stylesheet' />
   </head>
 
@@ -23,34 +25,43 @@
       <div id='sections'>
         <div class='hero'>
           <div class='overlay'></div>
-          <!-- <div class='arrow'><img src='assets/carat.png'/></div> -->
-          <div class='container'>
+          <div class='container intro'>
             <div class='header'>
-              <h1>A family's story of survival against all odds</h1>
-              <p>Heavy shooting broke out in the Central African Republic’s capital city, Bangui in 2013. This unprecedented humanitarian crisis spanning over six years now has left 2.9 million people, more than half of the population of CAR (4.6 million people) in dire need of humanitarian assistance and protection. More than one million people – or one in four people from CAR – is either a refugee outside the country or internally displaced. As of 31 March 2019, more than 621,000 people remain displaced.</p>
+              <label>Displaced in the Central African Republic</label>
+              <h1>One family’s journey of 600 kms</h1>
             </div>
+            <p>Violence broke out in the Central African Republic’s capital city, Bangui, in December 2013. The last six years of conflict have left 2.9 million people, almost half the population, in need of humanitarian assistance. Over 600,000 people are internally displaced, with 200,000 living in camps. Another 600,000 Central Africans live outside the country as refugees in Cameroon, Chad, the Democratic Republic of Congo and the Republic of Congo.</p>
+            <p>Follow the story of Mohamed and his family as they flee Bangui and travel 594 kilometers in search of safety.</p>
           </div>
         </div>
         <div class='main'>
           <section class='step' id='segment1'>
-            <h4>Segment 1</h4>
-            <p>Mohamed is a 50-year-old married father of eight children ranging in age from 15 to 2 years. He lived peacefully with his family in the neighbourhood of Galabadja in Bangui’s 8th district; owned his home and ran a retail shop until the outbreak of violence on 5 December 2013.</p>
+            <h4>Displaced in Bangui</h4>
+            <p>Mohamed is married with eight children ranging in age from 2 to 15 years old. The family are living in Bangui in December 2013 when fighting breaks out. Their home and business are looted and destroyed by armed groups. The family take whatever personal belongings they can and leave their neighborhood in Galabadja. Many people go to religious sites for shelter. Mohamed and his family go to the Bangui Central Mosque.</p>
           </section>
 
           <section class='step' id='segment2'>
-            <p>During inter-communal conflicts between Muslims and Christians, Mohamed and his family witnessed the ruthless killings of men, children and the rape of women and girls. The sight was too gruesome so when International Forces offered to escort persons-at-risk out of Bangui, Mohamed and his family seized this opportunity.</p>
+            <h4>Leaving Bangui for Bambari -- attacked in Sibut</h4>
+            <p>After two months at the Mosque, the family heads north in early 2014. They leave Bangui with a sense of relief, heading for the town of Bambari. This glimmer of hope is soon shattered when the convoy is attacked by armed men in the town of Sibut. During this incident, three people in the convoy are killed and Mohamed’s nine-year-old son is wounded. The travellers are devastated by these ruthless and arbitrary killings.</p>
           </section>
 
           <section class='step' id='segment3'>
-            <p>With the little money he had, Mohamed left the IDP site and rent a house, hoping to start a new business and to enroll his children in school. But he had to suspend all plans as inter-communal violence broke out in Bambari town in July 2014. As people restricted movement to avoid getting hit by stray bullets, Mohamed and his family ran out of all basic necessities including food and hygiene supplies.</p>
+            <h4>Arriving in Bambari</h4>
+            <p>Mohamed and his family have never been to Bambari before. Upon arrival, they seek refuge at the Bornou Mosque which has become a site for internally displaced people (IDP). The family is registered by aid workers and become eligible for humanitarian assistance. They receive food rations, shelter kits and have access to basic healthcare services. With the little money he has, Mohamed eventually leaves the IDP site and rents a house. He hopes to start a new business and to enroll his children in school.</p> 
+            <p>Barely five months after their arrival, as the family is beginning to adjust, inter-communal violence breaks out in Bambari in July 2014. Bambari becomes a ghost town as people restrict movement to reduce the risk of getting hit by stray bullets. Life becomes unbearable for Mohamed and his family who soon run out of food.</p>
           </section>
 
           <section class='step' id='segment4'>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h4>Walking from Bambari to Bria</h4>
+            <p>After witnessing the killing of a neighbor at the Bambari market, Mohamed and his family decide to walk to Bria. This 200 kilometer journey takes three weeks. The family sleep in the bush and are exposed to natural hazards including torrential rainfall and mosquitos. Mohamed’s four-year-old daughter becomes ill with a high fever and malaria. She recovers after receiving treatment from a mobile clinic operated by a humanitarian organization.</p>
+            <p>Upon arrival in Bria, the family registers at one of the biggest sites in the country, known as PK3, which hosts over 50,000 internally displaced people. Most displaced people in Bria have moved several times due to repeated attacks. Mohamed’s family soon realise that inter-communal tensions are also a reality in Bria, affecting the free movement of civilians within neighborhoods.</p>
+            <p>The PK3 site predominantly hosts Christians while Muslims live in the Bornou neighborhood. Both communities remain confined to their respective areas due to the fear of attacks.</p>
           </section>
 
           <section class='step' id='segment5'>
-            <p>Upon arrival in Bria, the family stayed at the PK3 IDP site, which host over 50,000 IDPs. Most IDPs in Bria and countrywide have been displaced several times due to repeated attacks. Mohamed soon realised that inter-communal tensions were also a reality in Bria. The PK3 IDP site predominantly host Christians while Muslims lived in the Bornou neighborhood.</p>
+            <h4>Moving to Bornou</h4>
+            <p>New violence in parts of Bria in November 2016 forces Mohamed and his family to move again. This time they go to Bornou neighborhood where they will be among people from their religious group.</p>
+            <p>Since this outbreak of violence and its escalation in April and May 2017, humanitarian organizations are providing life saving assistance to affected people, particularly those in camps and staying with host communities. Despite many challenges, 17 humanitarian organizations are present in Bria.</p>
           </section>
         </div>
         
@@ -60,74 +71,61 @@
     <article>
       <div class='grid-container'>
         <div class='col-12'>
-          <p>Access constraints continue to hinder humanitarians from reaching the most vulnerable people in need of assistance.</p>
-          <p>CAR remains one of the most dangerous countries in the world for humanitarians. Violence perpetrated by armed groups is also directed against humanitarian actors and their facilities. Humanitarian teams in field missions continue to be intercepted and attacked as they move towards populations in need of assistance. Acts of violence, looting and attacks against humanitarian organizations and their staff persists countrywide.</p>
+          <div class='title'><h2>Life in Bria</h2></div>
+          <p>Mohamed and his family decide to stay in Bria which, as of May 2019, hosts over 90,000 internally displaced people. Watch the video to see what life is like for displaced people in Bria and listen to Rosaria Bruno, Deputy Head of Office for OCHA in CAR, talk about how humanitarian organizations are trying to help. Also meet Didier, whose story is similar to that of Mohamed and his family.</p>
+          
+          <div class='video-container'>
+            <video id='droneVideo' controls muted='muted'>
+              <source src='assets/video2.mp4' type='video/mp4'>
+              Your browser does not support the video tag.
+            </video>
+            <p class='small'><i>Credit: OCHA</i></p>
+          </div>
         </div>
-        <div class='col-7'>
-          <p>During the first quarter of the year (January to March), 70 incidents directly affecting humanitarian staff or goods have been recorded compared with 65 over the same period in 2018. The sub-prefectures of Bambari (Ouaka Prefecture), Batangafo (Ouham Prefecture), Bria (Haute Kotto Prefecture) and Kaga-Bandoro (Nana Gribizi Prefecture) are the most affected areas.</p>
-          <p>In 2018, 41 incidents directly affecting humanitarian actors were recorded in the Bria sub-prefecture, ranking third as the most dangerous area for humanitarians in CAR. Four international NGOs have been robbed, physically assaulted or burglary attempts have been made either on their premises, in town or along the roads in the outskirts of the town. The Bria-Irrabanda road remains only partially accessible to humanitarian actors due to the high risk of attacks or threats from armed men and poor road infrastructures.</p>
+
+
+        <div class='col-12'>
+          <div class='title'><h2>Humanitarian access constraints</h2></div>
         </div>
         <div class='col-5'>
-          <img class='full-width' src='https://via.placeholder.com/300' />
+          <p>Access constraints continue to hinder humanitarians from reaching the most vulnerable people in need of assistance. CAR remains one of the most dangerous countries in the world for humanitarians. Violence perpetrated by armed groups is also directed against humanitarian actors and their facilities.</p>
+          <p>Acts of violence, looting and attacks against humanitarian organizations persists countrywide. Already in 2019, three humanitarian staff have been killed. During the first four months of the year, there were 111 incidents recorded on humanitarian staff or goods. Bambari, Batangafo, Bria and Kaga-Bandoro are the most affected areas.</p>
         </div>
-        <div class='col-12'>
-          <div class='title'><h2>Bria</h2></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        <div class='col-7'>
+          <img src='assets/roads.jpg' />
         </div>
-        <div class='col-12 video-container'>
-          <video id='droneVideo' controls muted='muted'>
-            <source src='assets/video.mp4' type='video/mp4'>
-            Your browser does not support the video tag.
-          </video>
-        </div>
-      </div>
-      <div class='grid-container'>
-        <div class='col-12'>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 
-          <div class='title'><h2>Subhead 2</h2></div>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        </div>
-        <div class='col-6'>
-          <img class='full-width' src='https://via.placeholder.com/400x300' />
-        </div>
-        <div class='col-6'>
-          <img class='full-width' src='https://via.placeholder.com/400x300' />
-        </div>
         <div class='col-12'>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <div class='title'><h2>Responding to the needs of Central Africans</h2></div>
+          <p>The <a href='https://www.humanitarianresponse.info/sites/www.humanitarianresponse.info/files/2019/02/2018_hrp_CAR_english_final_0.pdf' target='_blank'>2019 Humanitarian Response Plan</a> asks for $430.7 million to cover the needs of 1.7 million Central Africans. As of June 2019, it is 40 percent funded ($170.5 million).</p>
+
+          <div class='slideshow'>
+            <div><img data-lazy='assets/slideshow/1.jpg' title='Credit: Florent Vergnes/OCHA CAR'></div>
+            <div><img data-lazy='assets/slideshow/2.jpg' title='Credit: Florent Vergnes/OCHA CAR'></div>
+            <div><img data-lazy='assets/slideshow/3.jpg' title='Credit: Adrienne Surprenant/ OCHA CAR'></div>
+            <div><img data-lazy='assets/slideshow/4.jpg' title='Credit: Adrienne Surprenant/ OCHA CAR'></div>
+            <div><img data-lazy='assets/slideshow/5.jpg' title='Credit: Adrienne Surprenant/ OCHA CAR'></div>
+            <div><img data-lazy='assets/slideshow/6.jpg' title='Credit: Adrienne Surprenant/ OCHA CAR'></div>
+          </div>
         </div>
+
       </div>
     </article>
 
     <footer>
       <div class='grid-container'>
-        <div class='col-8'>
-          <p>As of November 2018, over half the population of South Sudan relies on aid to survive. Some 8.7 million people are food-insecure, half  of them severely, and 26,000 people live in famine-like conditions. Some 1.97 million people are internally displaced, and 2.2 million South Sudanese are refugees in neighbouring countries.</p>
-          <h3><i>You can help. Your voice is your signature.</i></h3>
-          <p><a href='http://www.crowd360.org/internal-displacement-campaign-mission-statement' target='_blank'>Sign here</a> and call for action help to prevent and resolve internal displacement and protect those affected.</p>
-          <p>Find out more: <a href='http://www.gp20.org' target='_blank'>www.gp20.org</a><br>Learn more about the UN’s work in South Sudan: <a href='https://www.unocha.org/south-sudan' target='_blank'>www.unocha.org/south-sudan</a></p>
-        </div>
-        <div class='col-4'>
-          <ul class='stats'>
-            <li><span>916 km</span><br>Total distance</li>
-            <li><span>499,229 steps</span><br>Walking steps</li>
-            <li><span>205 days</span><br>Duration</li>
-          </ul>
-        </div>
         <div class='col-12'>
-          <p class='small'>Acknowledgements: This data story was developed by OCHA’s Centre for Humanitarian Data in The Hague through its Data Fellows Programme in partnership with the Education Above All Foundation. The Centre worked closely with OCHA South Sudan and OCHA’s policy and communications branches to develop the narrative and to ensure the figures and timeline are accurate. It also worked closely with the International Organization for Migration and the Internal Displacement Monitoring Centre on the data. The story is based on actual experiences of displaced people in South Sudan, although the name Angelina is fictional.</p>
+          <ul class='stats'>
+            <li><span>594 km</span><br>Total distance</li>
+            <li><span>332,320 steps</span><br>Walking steps</li>
+            <li><span>XX</span><br>Duration</li>
+          </ul>
+          <p class='small'>Acknowledgements: This data story was developed by OCHA’s Centre for Humanitarian Data in The Hague. The Centre worked closely with OCHA Central African Republic to develop the narrative and to ensure the figures and timeline are accurate. The story is based on actual experiences of displaced people in the Central African Republic, although the name Mohamed is fictional.</p>
         </div>
       </div>
       <div class='logos'>
         <div class='grid-container'>
           <div class='col-12'>
-            <a href='https://educationaboveall.org' target='_blank'>
-              <img height='30' src='assets/logo-eaa-gray.png'>
-            </a>
             <a href='https://www.unocha.org' target='_blank'>
               <img height='30' src='assets/logo-ocha-gray.png'>
             </a>
