--- a/src/index.html
+++ b/src/index.html
@@ -78,7 +78,7 @@
         <div class='col-12'>
           <div class='video-container'>
             <video id='droneVideo' controls muted='muted'>
-              <source src='assets/car-video.mp4' type='video/mp4'>
+              <source src='assets/car-video2.mp4' type='video/mp4'>
               Your browser does not support the video tag.
             </video>
             <p class='small'><i>Credit: OCHA CAR</i></p>
